--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,75 @@
+amqp==2.6.1
 anyio==3.4.0
+asgiref==3.4.1
+async-generator==1.10
+atomicwrites==1.4.0
+attrs==21.2.0
+beautifulsoup4==4.10.0
+billiard==3.6.4.0
+celery==4.4.0
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.8
+click==8.0.3
+click-didyoumean==0.3.0
+click-plugins==1.1.1
+click-repl==0.2.0
+colorama==0.4.4
+configparser==5.2.0
+crayons==0.4.0
+cryptography==36.0.0
+dnspython==2.1.0
+email-validator==1.1.3
+eventlet==0.33.0
+fake-useragent==0.1.11
 fastapi==0.70.0
+free-proxy==1.0.4
+greenlet==1.1.2
+h11==0.12.0
+httptools==0.2.0
 idna==3.3
+iniconfig==1.1.1
+itsdangerous==2.0.1
+Jinja2==3.0.3
+kombu==4.6.11
+lxml==4.7.1
+MarkupSafe==2.0.1
+orjson==3.6.4
+outcome==1.1.0
+packaging==21.3
+playwright==1.17.2
+pluggy==1.0.0
+prompt-toolkit==3.0.23
+py==1.11.0
+pycparser==2.21
 pydantic==1.8.2
+pyee==8.2.2
+pyOpenSSL==21.0.0
+pyparsing==3.0.6
+pytest==6.2.5
+python-dotenv==0.19.2
+python-multipart==0.0.5
+pytz==2021.3
+PyYAML==5.4.1
+redis==3.5.3
+requests==2.26.0
+selenium==4.0.0b4
+six==1.16.0
 sniffio==1.2.0
+sortedcontainers==2.4.0
+soupsieve==2.3.1
 starlette==0.16.0
+toml==0.10.2
+trio==0.19.0
+trio-websocket==0.9.2
 typing_extensions==4.0.0
-
-uvicorn~=0.15.0
-celery~=5.2.1
+ujson==4.3.0
+undetected-chromedriver==3.0.3
+urllib3==1.26.7
+uvicorn==0.15.0
+vine==1.3.0
+watchgod==0.7
+wcwidth==0.2.5
+webdriver-manager==3.5.2
+websockets==10.1
+wsproto==1.0.0
