--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ asgiref==3.4.1
 async-generator==1.10
 atomicwrites==1.4.0
 attrs==21.2.0
+aiohttp-socks==0.7.1
 beautifulsoup4==4.10.0
 billiard==3.6.4.0
 celery==4.4.0
