--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,27 @@
-amqp==2.6.1
+aiodns==3.0.0
+aiofiles==0.8.0
+aiohttp==3.8.1
+aiohttp-socks==0.7.1
+aiokafka==0.7.2
+aiosignal==1.2.0
+aiosmtpd==1.4.4.post2
+aiosocksy==0.1.2
+amqp==5.1.1
 anyio==3.4.0
+appdirs==1.4.4
 asgiref==3.4.1
 async-generator==1.10
+async-timeout==4.0.2
 atomicwrites==1.4.0
+atpublic==3.1.1
 attrs==21.2.0
-aiohttp-socks==0.7.1
 beautifulsoup4==4.10.0
 billiard==3.6.4.0
-celery==4.4.0
+blinker==1.4
+Brotli==1.0.9
+bs4==0.0.1
+celery==5.2.7
+celery-singleton==0.3.1
 certifi==2021.10.8
 cffi==1.15.0
 charset-normalizer==2.0.8
@@ -19,60 +33,96 @@ colorama==0.4.4
 configparser==5.2.0
 crayons==0.4.0
 cryptography==36.0.0
+cssselect==1.1.0
 dnspython==2.1.0
 email-validator==1.1.3
+engineering-notation==0.6.0
 eventlet==0.33.0
 fake-useragent==0.1.11
 fastapi==0.70.0
+flower==1.1.0
 free-proxy==1.0.4
+frozenlist==1.3.0
 greenlet==1.1.2
 h11==0.12.0
+h2==4.1.0
+hpack==4.0.0
 httptools==0.2.0
+humanize==4.2.3
+hyperframe==6.0.1
 idna==3.3
+importlib-metadata==4.12.0
 iniconfig==1.1.1
 itsdangerous==2.0.1
 Jinja2==3.0.3
 kafka-python==2.0.2
-kombu==4.6.11
+kaitaistruct==0.10
+kombu==5.2.4
 lxml==4.7.1
 MarkupSafe==2.0.1
+multidict==6.0.2
+numpy==1.23.3
 orjson==3.6.4
 outcome==1.1.0
 packaging==21.3
+pandas==1.4.4
+parse==1.19.0
 playwright==1.17.2
 pluggy==1.0.0
+prometheus-client==0.14.1
 prompt-toolkit==3.0.23
 py==1.11.0
+pyasn1==0.4.8
+pycares==4.3.0
 pycparser==2.21
 pydantic==1.8.2
 pyee==8.2.2
 pyOpenSSL==21.0.0
 pyparsing==3.0.6
+pyppeteer==1.0.2
+pyquery==1.4.3
+PySocks==1.7.1
+pysocks5==0.1
 pytest==6.2.5
+python-dateutil==2.8.2
 python-dotenv==0.19.2
 python-multipart==0.0.5
+python-socks==2.0.3
 pytz==2021.3
 PyYAML==5.4.1
 redis==3.5.3
 requests==2.26.0
+requests-html==0.10.0
+rstr==3.2.0
 selenium==4.0.0b4
+selenium-wire==4.6.5
 six==1.16.0
 sniffio==1.2.0
 sortedcontainers==2.4.0
 soupsieve==2.3.1
+SQLAlchemy==1.4.41
 starlette==0.16.0
+telnetlib-proxy==0.3
+tk-tools==0.16.0
 toml==0.10.2
+tornado==6.2
+tqdm==4.64.0
 trio==0.19.0
 trio-websocket==0.9.2
 typing_extensions==4.0.0
 ujson==4.3.0
 undetected-chromedriver==3.0.3
+Unidecode==1.3.4
 urllib3==1.26.7
 uvicorn==0.15.0
-vine==1.3.0
+verify-email==2.4.3
+vine==5.0.0
+w3lib==1.22.0
 watchgod==0.7
 wcwidth==0.2.5
 webdriver-manager==3.5.2
 websockets==10.1
 wsproto==1.0.0
-celery-singleton
+yarl==1.7.2
+zipp==3.8.0
+zstandard==0.18.0
