--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
+aioboto3==10.4.0
+aiobotocore==2.4.2
 aiodns==3.0.0
 aiofiles==0.8.0
 aiohttp==3.8.1
 aiohttp-socks==0.7.1
+aioitertools==0.11.0
 aiokafka==0.7.2
 aiosignal==1.2.0
 aiosmtpd==1.4.4.post2
@@ -18,6 +21,8 @@ attrs==21.2.0
 beautifulsoup4==4.10.0
 billiard==3.6.4.0
 blinker==1.4
+boto3==1.24.59
+botocore==1.27.59
 Brotli==1.0.9
 bs4==0.0.1
 celery==5.2.7
@@ -40,7 +45,7 @@ engineering-notation==0.6.0
 eventlet==0.33.0
 fake-useragent==0.1.11
 fastapi==0.70.0
-flower==1.1.0
+flower==1.0.1
 free-proxy==1.0.4
 frozenlist==1.3.0
 greenlet==1.1.2
@@ -55,12 +60,14 @@ importlib-metadata==4.12.0
 iniconfig==1.1.1
 itsdangerous==2.0.1
 Jinja2==3.0.3
+jmespath==1.0.1
 kafka-python==2.0.2
 kaitaistruct==0.10
 kombu==5.2.4
 lxml==4.7.1
 MarkupSafe==2.0.1
 multidict==6.0.2
+mysqlclient==2.1.1
 numpy==1.23.3
 orjson==3.6.4
 outcome==1.1.0
@@ -94,6 +101,7 @@ redis==3.5.3
 requests==2.26.0
 requests-html==0.10.0
 rstr==3.2.0
+s3transfer==0.6.0
 selenium==4.0.0b4
 selenium-wire==4.6.5
 six==1.16.0
@@ -122,6 +130,7 @@ watchgod==0.7
 wcwidth==0.2.5
 webdriver-manager==3.5.2
 websockets==10.1
+wrapt==1.14.1
 wsproto==1.0.0
 yarl==1.7.2
 zipp==3.8.0
