--- a/requirements.txt
+++ b/requirements.txt
@@ -45,7 +45,7 @@ engineering-notation==0.6.0
 eventlet==0.33.0
 fake-useragent==0.1.11
 fastapi==0.70.0
-flower==1.0.1
+flower
 free-proxy==1.0.4
 frozenlist==1.3.0
 greenlet==1.1.2
@@ -67,7 +67,6 @@ kombu==5.2.4
 lxml==4.7.1
 MarkupSafe==2.0.1
 multidict==6.0.2
-mysqlclient==2.1.1
 numpy==1.23.3
 orjson==3.6.4
 outcome==1.1.0
