--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ aiofiles==0.8.0
 aiohttp==3.8.1
 aiohttp-socks==0.7.1
 aioitertools==0.11.0
+elasticsearch
 aiokafka==0.7.2
 aiosignal==1.2.0
 aiosmtpd==1.4.4.post2
